# awspm

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  deny.toml  e2e_test.sh  install.ps1  install.sh  mise.toml
.agent/skills/rust-cli-expert/: SKILL.md
.agent/skills/rust-cli-expert/references/: architecture.md  workflow.md
.agent/skills/rust-cli-expert/scripts/: verify_all.sh
.gemini/skills/ralph-loop-agent/: SKILL.md
.gemini/skills/rust-cli-expert/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh  setup_hooks.sh  update_brew.sh  upgrade_deps.sh
scripts/git-hooks/: pre-commit
src/: lib.rs  main.rs
src/core/: config.rs  error.rs  interaction.rs  mod.rs  policy.rs  sso.rs  types.rs  utils.rs
src/features/: mod.rs
src/features/completion/: mod.rs
src/features/current/: mod.rs
src/features/env/: logic.rs  mod.rs
src/features/exec/: logic.rs  mod.rs
src/features/init/: mod.rs
src/features/list/: logic.rs  mod.rs  view.rs
src/features/pin/: mod.rs
src/features/search/: logic.rs  mod.rs  view.rs
src/features/switch/: mod.rs
src/features/sync/: mod.rs
src/features/update/: logic.rs  mod.rs
tests/: feature_env_cmd.rs  feature_exec_env.rs  feature_guardrails.rs  feature_pin.rs  feature_switch.rs  feature_sync_logic.rs  infra_aws.rs  security_interactive.rs  sso_cache_path.rs  usecase_exec.rs
(+2 files in other folders)
