[package]
name = "awspm"
version = "0.1.1"
edition = "2024"
publish = false
license = "MIT"
description = "A powerful CLI tool to manage AWS profiles with tags, aliases, and smart context switching."
repository = "https://github.com/okojomoeko/awspm"
homepage = "https://github.com/okojomoeko/awspm"
keywords = ["aws", "cli", "profile", "manager", "devops"]
categories = ["command-line-utilities", "development-tools"]
authors = ["okojomoeko"]
readme = "README.md"

[[bin]]
name = "awspm"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
configparser = "3.1.0"
console = "0.16.2"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
hex = "0.4.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
tabled = { version = "0.20.0", features = ["ansi"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[target.'cfg(unix)'.dependencies]
skim = "3.7.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
temp-env = "0.3.6"
tempfile = "3.26.0"
